# tools

./: CMakeLists.txt  ibmextract.c
android/android_pc_dock/: README.md  run.php
android/readbatt/: README.md  battery_voltage.sh  charge_counter.sh  charging_current.sh  i9301_charging_current.sh  i9301_va.sh  p3110_charge.sh
android_pc_dock/: README.md  run.php
blog/0.dpc-latency/: README.md
car/lan2100/: README.md  decrypt.sln
car/lan8900/: Program.cs  README.md
cmake/cpp20_modules/: CMakeLists.txt  README.md  common.h  stdlib.h  stdlib.modmap
cmake/dotnet_installer/: CMakeLists.txt  README.md  build.bat  prerequisites.bat
cross/dotnet-bcm/: README.md  bcm.cmake  deploy.sh  make_bcm.sh  run.sh
cross/qnx6_toolchain/: README.md  qnx6_toolchain.sh
dva5592/autostart/: README.md  init.sh  smx.sh
dva5592/autostart/yaps-rootfs/: init_local.sh  init_post.sh
exploits/CVE-2021-4034/: README.md  make.sh  pwnkit.c
ibmextract/: CMakeLists.txt  README.md  ibmextract.c  ibmextract.h
kaitai/lgsym/: README.md  lgsym.ksy
kaitai/microsoft_pe/: README.md  microsoft_pe.ksy
media/gst-android-ipcam-rtsp/: README.md  gst-android-ipcam-rtsp.sh  play_webcam.sh
media/gst-rtsp-server/: README.md  rtsp-server.sh
media/gst-vbaudio/: README.md  gst-vbaudio.sh
media/juan-strip/: README.md  juan_strip.c
misc/arm_fpu_features/: README.md  make.sh  test_arm_features.c
misc/notes/: README.md
net/softether/: setup_bridge.sh  setup_softether.sh
net/softether/etc/systemd/system/softether-vpnserver.service.d/: override.conf
net/softether/opt/vpnserver/: post_start.sh
network/notes/: README.md
openlgtv/nand_extract/: README.md  nand_extract.php
openlgtv/waylandhax/: README.md  waylandhax.c
uefi/: README.md  grep.php
vl805/: CMakeLists.txt  README.md  vl805.c
windows/storefix/: README.md  storefix.php
